# VANTAGE-Reactions

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  CSD3_GPU_Reactions_guide.md  Dockerfile  Doxyfile.in  LICENSE  README.md  Singularity.def  codecov.yml  compile_commands.json  run_tests.sh  setup_tasks.md  spack.yaml  spack_clang.yaml  spack_gcc.yaml
src/: CMakeLists.txt  neso_test_assert.hpp  reactions.hpp
src/reactions/: CMakeLists.txt  Main.cpp  neso_test_assert.hpp  reactions.hpp
src/reactions_lib/: CMakeLists.txt  DataClass.hpp  add_new_reactions.md  binary_array_transform_data.hpp  common_array_transforms.hpp  common_markers.hpp  common_transformations.hpp  composite_data.hpp  concatenator_data.hpp  cross_section.hpp  data_calculator.hpp  downsampling_base.hpp  interp_utils.hpp  merge_transformation.hpp  merging_base.hpp  particle_properties_map.hpp  particle_spec_builder.hpp  pipeline_data.hpp  profiling_base.hpp  reaction_base.hpp  reaction_controller.hpp  reaction_data.hpp  reaction_data_accumulator.hpp  reaction_kernel_pre_reqs.hpp  reaction_kernels.hpp  transformation_wrapper.hpp  unary_array_transform_data.hpp  utils.hpp
src/reactions_lib/cross_sections/: AMJUEL_fit_cs.hpp  constant_rate_cs.hpp
src/reactions_lib/derived_reactions/: electron_impact_ionisation.hpp  recombination_reaction.hpp
src/reactions_lib/downsampling_kernels/: simple_thinning_kernels.hpp  vranic_merging_kernels.hpp
src/reactions_lib/ionisation_reactions/: amjuel_ionisation.hpp  fixed_rate_ionisation.hpp
src/reactions_lib/ionisation_reactions_data/: amjuel_ionisation_data.hpp  fixed_rate_ionisation_data.hpp
src/reactions_lib/ionisation_reactions_kernels/: base_ionisation_kernels.hpp
src/reactions_lib/merging_kernels/: vranic_merging_kernels.hpp
src/reactions_lib/reaction_data/: ADAS_data.hpp  AMJUEL_1D_data.hpp  AMJUEL_2D_data.hpp  AMJUEL_2D_data_H3.hpp  array_lookup_data.hpp  arrhenius_data.hpp  cartesian_basis_reflection_data.hpp  component_data.hpp  extractor_data.hpp  filtered_maxwellian_sampler.hpp  fixed_array_data.hpp  fixed_coefficient_data.hpp  fixed_rate_data.hpp  grid_eval_data.hpp  interpolate_data.hpp  sampler_data.hpp  specular_reflection_data.hpp  spherical_basis_reflection_data.hpp  trim_eval_data.hpp
src/reactions_lib/reaction_kernels/: base_cx_kernels.hpp  base_ionisation_kernels.hpp  base_recombination_kernels.hpp  general_absorption_kernels.hpp  general_linear_scattering_kernels.hpp  specular_reflection_kernels.hpp
test/: CMakeLists.txt
test/examples/: CMakeLists.txt  test_examples.cpp
test/examples/example_sources/: example_amjuel2d.hpp  example_custom_properties.hpp  example_linear_reaction_CX.hpp  example_merging_strategy.hpp  example_property_container.hpp  example_recombination_reaction.hpp  example_removal_strategy.hpp  example_transformation_wrapper.hpp
test/unit/: CMakeLists.txt  Main.cpp  example_test.cpp  test_ADAS_data.cpp  test_absorption_reaction.cpp  test_array_transform_data.cpp  test_charge_exchange_reaction.cpp  test_concatenator_data.cpp  test_cross_sections.cpp  test_data_calculator.cpp  test_examples.cpp  test_extrapolation.cpp  test_interpolation.cpp  test_interpolation_pipeline.cpp  test_ionisation_reaction.cpp  test_local_memory_interlaced.cpp  test_lookup_table_data.cpp  test_merge_transformation.cpp  test_particle_loop_bug.cpp  test_particle_spec_builder.cpp  test_properties.cpp  test_reaction_base.cpp  test_reaction_controller.cpp  test_reaction_data.cpp  test_recombination_reaction.cpp  test_simple_thinning_transformation.cpp  test_species.cpp  test_surface_kernels.cpp  test_transformation_wrapper.cpp  test_velocity_sampling.cpp  test_vranic_merge_transformation.cpp
test/unit/ChargeExchange/: test_sampled_beam_exchange_2D.cpp  test_sampled_beam_exchange_3D.cpp  test_simple_beam_exchange.cpp
test/unit/CrossSections/: test_AMJUEL_H1_bulk.cpp  test_AMJUEL_H1_high_energy.cpp  test_AMJUEL_H1_low_energy.cpp
test/unit/DataCalculator/: test_custom_sources.cpp  test_mixed_multi_dim.cpp
test/unit/Examples/: test_examples.cpp
test/unit/IonisationReaction/: test_calc_rate.cpp
test/unit/LinearReactionBase/: test_calc_rate.cpp  test_calc_var_rate.cpp  test_data_calc_pre_req_ndim_mismatch.cpp  test_device_rate_buffer_reallocation.cpp  test_single_group_multi_reaction.cpp  test_split_group_single_reaction.cpp
test/unit/MergeTransformationStrategy/: test_particle_group_merging.hpp  test_transform_2D.cpp  test_transform_3D.cpp
test/unit/ParticleSpecBuilder/: test_add_particle_prop.cpp  test_add_particle_spec.cpp
test/unit/Properties/: test_full_use_properties_map.cpp  test_merge_with.cpp  test_modify_property_map.cpp  test_properties_getters.cpp  test_properties_map_setting.cpp  test_property_constructor.cpp  test_simple_prop_index.cpp  test_simple_prop_names.cpp  test_species_prop_index.cpp  test_species_prop_names.cpp
test/unit/ReactionController/: test_ionisation_reaction.cpp  test_ionisation_reaction_accumulator.cpp  test_ionisation_reaction_amjuel.cpp  test_multi_reaction_multi_apply.cpp  test_multi_reaction_multiple_products.cpp  test_parent_transform.cpp  test_semi_dsmc_test.cpp  test_single_reaction_multi_apply.cpp
test/unit/ReactionData/: test_AMJUEL_2D_Data_coronal.cpp  test_AMJUEL_2D_data.cpp  test_AMJUEL_2D_data_H3.cpp  test_ephemeral_properties_reaction_data.cpp  test_fixed_coefficient_data.cpp
test/unit/Recombination/: test_kernel.cpp
test/unit/TransformationWrapper/: test_cellwise_accumulator.cpp  test_cellwise_accumulator_int.cpp  test_composite_transform_zeroer.cpp  test_simple_removal_transformation_strategy_compose.cpp  test_simple_removal_transformation_strategy_equals.cpp  test_simple_removal_transformation_strategy_less_than.cpp  test_weighted_cellwise_accumulator.cpp  test_weighted_cellwise_accumulator_int.cpp  transformation_wrapper_utils.hpp
test/unit/VelocitySampling/: test_filtered_maxwellian_failure.cpp
test/unit/example_sources/: example_accumulator_strategy.hpp  example_amjuel1d.hpp  example_amjuel2d.hpp  example_amjuel2dH3.hpp  example_amjuel_cs.hpp  (+38 more)
(+68 files in other folders)
